fix: use ExecutionContext instead of System.getEnv
related to apim-1614